[project]
name = "netcheck"
version = "1.0.0"
description = "Light network diagnostics: DNS, TCP, HTTP(S), TLS expiry, ping + JSON report"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
netcheck = "netcheck.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
