[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netcheck"
version = "1.0.0"
description = "Light network diagnostics: DNS, TCP, HTTP(S), TLS expiry"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
netcheck = "netcheck.cli:main"

[tool.setuptools]
packages = ["netcheck"]
